[gd_scene load_steps=17 format=3 uid="uid://k1xykyv02jvh"]

[ext_resource type="Texture2D" uid="uid://c6xruenp2o4fi" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Death 1.png" id="1_ihtfr"]
[ext_resource type="Script" path="res://Scripts/Enemies/rockpillar.gd" id="1_yail6"]
[ext_resource type="Texture2D" uid="uid://c7suh7qn06up" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Death 2.png" id="2_wtjlg"]
[ext_resource type="Texture2D" uid="uid://bj6b8s04osprm" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Death 3.png" id="3_t4ah8"]
[ext_resource type="Texture2D" uid="uid://co4m7kct1xqmo" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Death 4.png" id="4_uwa7t"]
[ext_resource type="Texture2D" uid="uid://h2t5ew8cgq0b" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Death 5.png" id="5_ug86q"]
[ext_resource type="Texture2D" uid="uid://800o0qgoxtmq" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Crawl 1.png" id="6_ct4kh"]
[ext_resource type="Texture2D" uid="uid://bo1qd68fpn3qj" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Crawl 2.png" id="7_wuum6"]
[ext_resource type="Texture2D" uid="uid://bltehi8a35fei" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Crawl 3.png" id="8_06hd5"]
[ext_resource type="Texture2D" uid="uid://grdfjr82boyl" path="res://Sprites/Character Sprites/Enemies/Rockpillar/Rockpillar Crawl 4.png" id="9_3l2ux"]
[ext_resource type="AudioStream" uid="uid://b0ex20utl8tfk" path="res://Assets/Audio/SFX/Rock Debris Large 24.wav" id="11_sd6u1"]
[ext_resource type="AudioStream" uid="uid://b2tlbqjpfrgna" path="res://Assets/Audio/SFX/Growl 1_1.wav" id="12_gwdl3"]
[ext_resource type="AudioStream" uid="uid://bo7mjte4btgsi" path="res://Assets/Audio/SFX/Earth Punch 3.wav" id="13_8pss1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hyx5a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ihtfr")
}, {
"duration": 1.0,
"texture": ExtResource("2_wtjlg")
}, {
"duration": 1.0,
"texture": ExtResource("3_t4ah8")
}, {
"duration": 1.0,
"texture": ExtResource("4_uwa7t")
}, {
"duration": 1.0,
"texture": ExtResource("5_ug86q")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ct4kh")
}, {
"duration": 1.0,
"texture": ExtResource("7_wuum6")
}, {
"duration": 1.0,
"texture": ExtResource("8_06hd5")
}, {
"duration": 1.0,
"texture": ExtResource("9_3l2ux")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4ya2"]
size = Vector2(218, 161.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7g5p"]
size = Vector2(190, 144)

[node name="Rockpillar" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_yail6")
SPEED = 0.1
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hyx5a")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 47.875)
shape = SubResource("RectangleShape2D_i4ya2")

[node name="Floor_Checker" type="RayCast2D" parent="."]
position = Vector2(-75, 127)
target_position = Vector2(0, 25)
collision_mask = 8

[node name="Hurt_Box" type="Area2D" parent="."]
collision_layer = 0

[node name="Hurt_Box_Collision" type="CollisionShape2D" parent="Hurt_Box"]
position = Vector2(-7.5, 40.5)
shape = SubResource("RectangleShape2D_l7g5p")

[node name="SFX" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="die" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("11_sd6u1")
bus = &"SFX"

[node name="hurt" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("12_gwdl3")
bus = &"SFX"

[node name="attack" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("13_8pss1")
bus = &"SFX"

[connection signal="body_entered" from="Hurt_Box" to="." method="_on_hurt_box_body_entered"]
